[gd_scene load_steps=38 format=3 uid="uid://d3ym2eve3i077"]

[ext_resource type="Script" path="res://src/player/player.gd" id="1_lho8y"]
[ext_resource type="Script" path="res://src/state_machine/state_machine.gd" id="2_jacng"]
[ext_resource type="Script" path="res://src/player/states/Walk.gd" id="3_tik4p"]
[ext_resource type="Script" path="res://src/player/states/Dash.gd" id="4_2x4ls"]
[ext_resource type="Script" path="res://src/player/states/Attack.gd" id="5_xbnno"]
[ext_resource type="Texture2D" uid="uid://d8jc8uside01" path="res://assets/art/combo_bar_frame_temp.png" id="6_20kge"]
[ext_resource type="Texture2D" uid="uid://cl05onti83lp7" path="res://assets/art/player/Character_Sheet_real_finalbuild_fortnite_sprite-Sheet.png" id="6_pi377"]
[ext_resource type="Texture2D" uid="uid://dmvxayli78tri" path="res://assets/art/player/attack_temp.png" id="7_6q76q"]
[ext_resource type="Script" path="res://src/player/Hitbox_temp.gd" id="7_84n8a"]
[ext_resource type="Texture2D" uid="uid://vkb2ocealsml" path="res://assets/art/combo_bar_fill_temp.png" id="7_ny8w7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ccntx"]
size = Vector2(6, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gsfch"]
size = Vector2(16, 16)

[sub_resource type="LabelSettings" id="LabelSettings_gamxu"]

[sub_resource type="Animation" id="Animation_jss6w"]
resource_name = "AttackDown"
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flip/Hitbox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flip/Hitbox/Sprite2D:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(2, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Flip/Character_Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.5, 0.65, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [20, 21, 23, 24, 25, 26, 27]
}

[sub_resource type="Animation" id="Animation_ok08f"]
resource_name = "AttackDownSide"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flip/Hitbox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16, 16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flip/Hitbox/Sprite2D:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(4, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Flip/Character_Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [46, 47, 48, 49, 50, 51, 52]
}

[sub_resource type="Animation" id="Animation_3ms8x"]
resource_name = "AttackSide"
length = 3.0
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flip/Hitbox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flip/Hitbox/Sprite2D:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Flip/Character_Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.25, 0.4, 0.7, 1, 1.3, 1.6, 1.9, 2.2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68]
}

[sub_resource type="Animation" id="Animation_g883u"]
resource_name = "AttackUp"
length = 1.12
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flip/Hitbox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flip/Hitbox/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Flip/Character_Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.5, 0.7, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31, 32, 33, 34, 35, 36]
}

[sub_resource type="Animation" id="Animation_pan10"]
resource_name = "AttackUpSide"
length = 0.85
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flip/Hitbox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16, -16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flip/Hitbox/Sprite2D:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(3, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Flip/Character_Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [37, 38, 39, 40, 41, 42, 43, 44, 45]
}

[sub_resource type="Animation" id="Animation_en7hj"]
resource_name = "DashDown"

[sub_resource type="Animation" id="Animation_r804u"]
resource_name = "DashDownSide"

[sub_resource type="Animation" id="Animation_bhix2"]
resource_name = "DashSide"

[sub_resource type="Animation" id="Animation_o6usd"]
resource_name = "DashUp"

[sub_resource type="Animation" id="Animation_g1v04"]
resource_name = "DashUpSide"

[sub_resource type="Animation" id="Animation_rhv12"]
resource_name = "IdleDown"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flip/Character_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_s1y77"]
resource_name = "IdleDownSide"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flip/Character_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}

[sub_resource type="Animation" id="Animation_xgqwp"]
resource_name = "IdleSide"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flip/Character_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [53]
}

[sub_resource type="Animation" id="Animation_uh51d"]
resource_name = "IdleUp"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flip/Character_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="Animation_uvdjj"]
resource_name = "IdleUpSide"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flip/Character_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_por6y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flip/Hitbox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flip/Hitbox/Sprite2D:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Flip/Hitbox/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_4su5r"]
resource_name = "WalkDown"
length = 0.55
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flip/Character_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_x7ilt"]
resource_name = "WalkDownSide"
length = 0.55
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flip/Character_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 18, 19, 20]
}

[sub_resource type="Animation" id="Animation_8kaw7"]
resource_name = "WalkSide"
length = 0.55
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flip/Character_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [53, 54, 55, 56, 57]
}

[sub_resource type="Animation" id="Animation_g3hnx"]
resource_name = "WalkUp"
length = 0.55
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flip/Character_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10]
}

[sub_resource type="Animation" id="Animation_ysp5k"]
resource_name = "WalkUpSide"
length = 0.35
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flip/Character_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [11, 12, 13, 14]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qtd45"]
_data = {
"AttackDown": SubResource("Animation_jss6w"),
"AttackDownSide": SubResource("Animation_ok08f"),
"AttackSide": SubResource("Animation_3ms8x"),
"AttackUp": SubResource("Animation_g883u"),
"AttackUpSide": SubResource("Animation_pan10"),
"DashDown": SubResource("Animation_en7hj"),
"DashDownSide": SubResource("Animation_r804u"),
"DashSide": SubResource("Animation_bhix2"),
"DashUp": SubResource("Animation_o6usd"),
"DashUpSide": SubResource("Animation_g1v04"),
"IdleDown": SubResource("Animation_rhv12"),
"IdleDownSide": SubResource("Animation_s1y77"),
"IdleSide": SubResource("Animation_xgqwp"),
"IdleUp": SubResource("Animation_uh51d"),
"IdleUpSide": SubResource("Animation_uvdjj"),
"RESET": SubResource("Animation_por6y"),
"WalkDown": SubResource("Animation_4su5r"),
"WalkDownSide": SubResource("Animation_x7ilt"),
"WalkSide": SubResource("Animation_8kaw7"),
"WalkUp": SubResource("Animation_g3hnx"),
"WalkUpSide": SubResource("Animation_ysp5k")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6118o"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dmb70"]
size = Vector2(16, 16)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 5
script = ExtResource("1_lho8y")

[node name="TerrainShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_ccntx")

[node name="CardPickup" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardPickup"]
shape = SubResource("RectangleShape2D_gsfch")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_jacng")
initial_state = NodePath("Walk")

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource("3_tik4p")

[node name="Dash" type="Node" parent="StateMachine"]
script = ExtResource("4_2x4ls")

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("5_xbnno")

[node name="temp_StateLabel" type="Label" parent="."]
offset_left = -33.0
offset_top = -66.0
offset_right = 33.0
offset_bottom = -29.0
text = "hi !"
label_settings = SubResource("LabelSettings_gamxu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="temp_AnimationLabel" type="Label" parent="."]
offset_left = -90.0
offset_top = -93.0
offset_right = 90.0
offset_bottom = -56.0
text = "hi !"
label_settings = SubResource("LabelSettings_gamxu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="temp_Attack_CD_label" type="Label" parent="."]
offset_left = -61.0
offset_top = 37.0
offset_right = 59.0
offset_bottom = 63.0
text = "hi!"
horizontal_alignment = 1

[node name="temp_Dash_CD_label" type="Label" parent="."]
offset_left = -57.0
offset_top = 65.0
offset_right = 54.0
offset_bottom = 88.0
text = "hi!"
horizontal_alignment = 1

[node name="temp_InputChainLabel" type="Label" parent="."]
offset_left = -70.0
offset_top = 6.0
offset_right = 69.0
offset_bottom = 43.0
text = "hi !"
label_settings = SubResource("LabelSettings_gamxu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="temp_stats_label" type="Label" parent="."]
offset_left = -77.0
offset_top = 88.0
offset_right = 76.0
offset_bottom = 111.0
text = "hi!"
horizontal_alignment = 1

[node name="temp_ActiveEffectLabel" type="Label" parent="."]
visible = false
offset_left = -63.0
offset_top = 43.0
offset_right = 64.0
offset_bottom = 66.0
text = "hi !"
horizontal_alignment = 1

[node name="tempt_ActiveCardLabel" type="Label" parent="."]
visible = false
offset_left = -89.0
offset_top = 68.0
offset_right = 84.0
offset_bottom = 91.0
text = "hi !"
horizontal_alignment = 1

[node name="ComboBar" type="TextureProgressBar" parent="."]
offset_left = -25.0
offset_top = -32.0
offset_right = 1008.0
offset_bottom = 258.0
scale = Vector2(0.05, 0.02)
value = 100.0
texture_over = ExtResource("6_20kge")
texture_progress = ExtResource("7_ny8w7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qtd45")
}

[node name="Flip" type="Node2D" parent="."]

[node name="Character_Sprite" type="Sprite2D" parent="Flip"]
position = Vector2(0, -5)
texture = ExtResource("6_pi377")
hframes = 69
frame = 13

[node name="Hurtbox" type="Area2D" parent="Flip"]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flip/Hurtbox"]
shape = SubResource("RectangleShape2D_6118o")

[node name="Polygon2D" type="Polygon2D" parent="Flip"]
visible = false
color = Color(0.266667, 1, 0, 1)
polygon = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)

[node name="Hitbox" type="Area2D" parent="Flip"]
position = Vector2(16, 0)
collision_layer = 4
collision_mask = 0
monitorable = false
script = ExtResource("7_84n8a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flip/Hitbox"]
visible = false
shape = SubResource("RectangleShape2D_dmb70")

[node name="Polygon2D" type="Polygon2D" parent="Flip/Hitbox/CollisionShape2D"]
color = Color(1, 0.0313726, 0.0313726, 0.596078)
polygon = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)

[node name="Sprite2D" type="Sprite2D" parent="Flip/Hitbox"]
visible = false
texture = ExtResource("7_6q76q")
hframes = 5
frame = 1
